--- a/templates/test-app/config.yml
+++ b/templates/test-app/config.yml
@@ -1,4 +1,4 @@
 name: Sonar Sample Apps
-description: SQ Enterprise application for test
+description: JENKINS Enterprise application for test - updated
 version: latest
 category: test automation
