--- a/templates/test-app/config.yml
+++ b/templates/test-app/config.yml
@@ -1,4 +1,4 @@
 name: Sonar Sample Apps
-description: JENKINS Enterprise application for test - updated
+description: JENKINS Enterprise application for test - updated - updated as per Jira 2 updates, changed pic
 version: latest
 category: test automation
